deus-configs/k8s/couchdb-init-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: couchdb-init
spec:
  selector:
    matchLabels:
      component: couchdb-init
  template:
    metadata:
      labels:
        component: couchdb-init
    spec:
      containers:
      - name: deus-couchdb-init
        image: alexeyeremin/deus-couchdb-init
        volumeMounts:
        - name: models-src
          mountPath: /deus-models
          readOnly: true
      volumes:
      - name: models-src
        emptyDir: {}
