deus-configs/k8s/deus-server-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: deus-server
spec:
  selector:
    matchLabels:
      component: deus-server
  template:
    metadata:
      labels:
        component: deus-server
    spec:
      containers:
      - image: alexeyeremin/deus-server
        imagePullPolicy: Always
        name: deus-server
        ports:
        - containerPort: 8157
        readinessProbe:
          httpGet:
            path: /time
            port: 8157
          initialDelaySeconds: 3
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /time
            port: 8157
          initialDelaySeconds: 3
          periodSeconds: 20
