deus-configs/k8s/deus-worker-manager-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: deus-worker-manager
spec:
  selector:
    matchLabels:
      component: deus-worker-manager
  template:
    metadata:
      labels:
        component: deus-worker-manager
    spec:
      containers:
      - image: docker-registry.alice.magellan2018.ru/deus-worker-manager
        imagePullPolicy: Always
        name: deus-worker-manager
        volumeMounts:
        - name: models-src
          mountPath: /deus-models
          readOnly: true
      volumes:
      - name: models-src
        emptyDir: {}
