deus-configs/k8s/elasticsearch-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels:
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: launcher.gcr.io/google/elasticsearch6:6.2
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 9200
            httpHeaders:
          initialDelaySeconds: 3
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /
            port: 9200
            httpHeaders:
          initialDelaySeconds: 3
          periodSeconds: 20
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch-data
      volumes:
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: elasticsearch-data
