deus-configs/k8s/import-server-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: import-server
spec:
  selector:
    matchLabels:
      component: import-server
  template:
    metadata:
      labels:
        component: import-server
    spec:
      containers:
      - image: alexeyeremin/import-server
        imagePullPolicy: Always
        name: import-server
        ports:
        - containerPort: 8100
        readinessProbe:
          httpGet:
            path: /
            port: 8100
          initialDelaySeconds: 3
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /
            port: 8100
          initialDelaySeconds: 3
          periodSeconds: 20
