deus-configs/k8s/kibana-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels:
      run: kibana
  template:
    metadata:
      labels:
        run: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana-oss:6.3.0
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
