deus-configs/k8s/technopark-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: technopark
spec:
  selector:
    matchLabels:
      component: technopark
  template:
    metadata:
      labels:
        component: technopark
    spec:
      containers:
      - image: docker-registry.alice.magellan2018.ru/technopark
        imagePullPolicy: Always
        name: technopark
        ports:
        - containerPort: 8888
        readinessProbe:
          httpGet:
            path: /mcc/dashboard
            port: 8888
          initialDelaySeconds: 3
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /mcc/dashboard
            port: 8888
          initialDelaySeconds: 3
          periodSeconds: 20
