deus-configs/k8s/technopark-frontend-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: technopark-frontend
spec:
  selector:
    matchLabels:
      component: technopark-frontend
  template:
    metadata:
      labels:
        component: technopark-frontend
    spec:
      containers:
      - image: docker-registry.alice.magellan2018.ru/technopark-frontend
        imagePullPolicy: Always
        name: technopark-frontend
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 20
