deus-configs/k8s/couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
spec:
  type: LoadBalancer
  selector:
    component: couchdb
  ports:
  - name: "5984"
    port: 5984
    targetPort: 5984
