deus-configs/k8s/deus-qr-lib-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deus-qr-lib
spec:
  type: NodePort
  selector:
    component: deus-qr-lib
  ports:
  - name: "8159"
    port: 8159
    targetPort: 8159
