deus-configs/k8s/deus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deus-server
spec:
  type: NodePort
  selector:
    component: deus-server
  ports:
  - name: "8157"
    port: 8157
    targetPort: 8157
