deus-configs/k8s/magellan-flights-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magellan-flights-server
spec:
  type: LoadBalancer
  selector:
    component: magellan-flights-server
  ports:
  - name: "8010"
    port: 8010
    targetPort: 8010
