deus-configs/k8s/medicine-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medicine-frontend
spec:
  type: LoadBalancer
  selector:
    component: medicine-frontend
  ports:
  - name: http
    port: 8000
    targetPort: 80
