deus-configs/k8s/technopark-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technopark-frontend
spec:
  type: NodePort
  selector:
    component: technopark-frontend
  ports:
  - name: http
    port: 8889
    targetPort: 80
