deus-configs/k8s/technopark-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technopark
spec:
  type: NodePort
  selector:
    component: technopark
  ports:
  - name: http
    port: 8888
    targetPort: 8888
